Make sure there is enough spacing in blog sidebar.

--- a/app/assets/stylesheets/store/partials/_sidebar.css.scss
+++ b/app/assets/stylesheets/store/partials/_sidebar.css.scss
@@ -87,7 +87,7 @@ aside#sidebar {
   }
 
 
-  div[data-hook="homepage_sidebar_navigation"], div[data-hook="taxon_sidebar_navigation"] {
+  div[data-hook="homepage_sidebar_navigation"], div[data-hook="taxon_sidebar_navigation"], div[data-hook="post-sidebar"] {
     padding: 10px;
   }
 }
